--- a/9595.html
+++ b/9595.html
@@ -158,32 +158,31 @@
 
         </div>
 
-            <div class="container2">
-                <div class="gallery">
-                    <a href="images/9595 1.jpg" data-lightbox="models" data-title="Tuote">
-                        <img src="images/9595 1.jpg">
-                    </a>
-                    <a href="images/9595.2.jpg" data-lightbox="models" data-title="Raaka-aine paikka V2">
-                        <img src="images/9595.2.jpg">
-                    </a>
-                    <a href="images/9595.3.jpg" data-lightbox="models" data-title="Käpälä">
-                        <img src="images/9595.3.jpg">
-                    </a>
-                    <a href="images/9595.4.jpg" data-lightbox="models" data-title="Robotti ohjelma">
-                        <img src="images/9595.4.jpg">
-                    </a>
-                    <a href="images/9595.5.jpg" data-lightbox="models" data-title="162571.162572">
-                        <img src="images/9595.5.jpg">
-                    </a>
-                    <a href="images/9595.6.jpg" data-lightbox="models" data-title="162573">
-                        <img src="images/9595.6.jpg">
-                    </a>
-                    <a href="images/9595.7.jpg" data-lightbox="models" data-title="Lavalle">
-                        <img src="images/9595.7.jpg">
-                    </a>
-                </div>
+        <div class="container2">
+            <div class="gallery">
+                <div class="image"><span><img src="images/9595.1.jpg" alt="">Tuote</span></div>
+                <div class="image"><span><img src="images/9595.2.jpg" alt="">Raaka-aine</span></div>
+                <div class="image"><span><img src="images/9595.3.jpg" alt="">Käpälä</span></div>
+                <div class="image"><span><img src="images/9595.4.jpg" alt="">Robotti ohjelma</span></div>
+                <div class="image"><span><img src="images/9595.5.jpg" alt="">162571,162572</span></div>
+                <div class="image"><span><img src="images/9595.6.jpg" alt="">162573</span></div>
+                <div class="image"><span><img src="images/9595.7.jpg" alt="">Lavalle</span></div>
             </div>
-<script src="lightbox-plus-jquery.js"></script>
+        </div>
+        <div class="preview-box">
+            <div class="details">
+                <span class="title">Image <p class="current-img"></p> of <p class="total-img"></p></span>
+                <span class="icon fas fa-times"></span>
+            </div>
+            <div class="image-box">
+                <div class="slide prev"><i class="fas fa-angle-left"></i></div>
+                <div class="slide next"><i class="fas fa-angle-right"></i></div>
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="shadow"></div>
+              
+        <script src="script/script2.js"></script>     
                  
         </aside>
    
