--- a/9596.html
+++ b/9596.html
@@ -155,32 +155,31 @@
 
         </div>
 
-            <div class="container2">
-                <div class="gallery">
-                    <a href="images/9596.1.jpg" data-lightbox="models" data-title="Tuote">
-                        <img src="images/9596.1.jpg">
-                    </a>
-                    <a href="images/9596.2.jpg" data-lightbox="models" data-title="Raaka-aine paikka V2">
-                        <img src="images/9596.2.jpg">
-                    </a>
-                    <a href="images/9596.3.jpg" data-lightbox="models" data-title="Käpälä">
-                        <img src="images/9596.3.jpg">
-                    </a>
-                    <a href="images/9596.4.jpg" data-lightbox="models" data-title="Robotti ohjelma">
-                        <img src="images/9596.4.jpg">
-                    </a>
-                    <a href="images/9596.5.jpg" data-lightbox="models" data-title="162574,162576">
-                        <img src="images/9596.5.jpg">
-                    </a>
-                    <a href="images/9596.6.jpg" data-lightbox="models" data-title="162575">
-                        <img src="images/9596.6.jpg">
-                    </a>
-                    <a href="images/9596.7.jpg" data-lightbox="models" data-title="Lavalle">
-                        <img src="images/9596.7.jpg">
-                    </a>
-                </div>
+        <div class="container2">
+            <div class="gallery">
+                <div class="image"><span><img src="images/9596.1.jpg" alt="">Tuote</span></div>
+                <div class="image"><span><img src="images/9596.2.jpg" alt="">Raaka-aine</span></div>
+                <div class="image"><span><img src="images/9596.3.jpg" alt="">Käpälä</span></div>
+                <div class="image"><span><img src="images/9596.4.jpg" alt="">Robotti ohjelma</span></div>
+                <div class="image"><span><img src="images/9596.5.jpg" alt="">162574,162576</span></div>
+                <div class="image"><span><img src="images/9596.6.jpg" alt="">162575</span></div>
+                <div class="image"><span><img src="images/9596.7.jpg" alt="">Lavalle</span></div>
             </div>
-<script src="lightbox-plus-jquery.js"></script>
+        </div>
+        <div class="preview-box">
+            <div class="details">
+                <span class="title">Image <p class="current-img"></p> of <p class="total-img"></p></span>
+                <span class="icon fas fa-times"></span>
+            </div>
+            <div class="image-box">
+                <div class="slide prev"><i class="fas fa-angle-left"></i></div>
+                <div class="slide next"><i class="fas fa-angle-right"></i></div>
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="shadow"></div>
+              
+        <script src="script/script2.js"></script>     
                  
         </aside>
    
