--- a/160706.html
+++ b/160706.html
@@ -103,7 +103,7 @@
                                     <img src="videos/160706.jpg" width="100%">
                                     <img src="videos/play.png" class="play-btn" onclick="playVideo('videos/160706.mp4')">
                                 </div>
-                                <p>VT matala</p>
+                                <p>Push stem(pieni kela)</p>
                             </div>
                         </div>
                         <div class="col1">
