--- a/162886.html
+++ b/162886.html
@@ -56,7 +56,7 @@
                     Kuivaus: 2-6h 80c<br>
                     Väri: 502090 musta /S3<br>
                     Muistipaikka:         <br>
-                    Asiakas: Abloy Oy (tarra)<br>
+                    Asiakas:  (tarra)<br>
                     Hyllynumero:
                 </p>
                          
