--- a/9538.html
+++ b/9538.html
@@ -48,15 +48,15 @@
                       
                 <h4>TIEDOT</h4>
                 <p>
-                    Tuotenumero:170784,170785,170787,170788,  <br>
-                    170791,170798,170799,173010 <br>
+                    Tuotenumero:170784,170785,170787,  <br>
+                    170788,170791,170798,170799,173010 <br>
                     Nimi:Maxi Fantti <br>
                     Muottinumero: 9538 lavanum. 68    <br>
                     Vaihtopalat: EI      <br>
                     Raaka-Aine:216309/U1 ja 216307/M2<br>
                     Kuivaus: Ei<br>
                     Väri:  /<br>
-                    Muistipaikka:Valkoinen/3,Roosa/4,Musta/5, <br>
+                    Muistipaikka:Valk./3,Roosa/4,Musta/5, <br>
                     Harmaa/14,Oranssi/20 <br>
                     Asiakas: Tunnistekortti<br>
                  
