--- a/9538.html
+++ b/9538.html
@@ -69,7 +69,7 @@
                 <h4>OHJEET</h4>
                 <p>
                     Oma nokka ja säädin <br>
-                    Raaka-ain. sekoitus,216309 66%,216307 33% <br>
+                    R-a sekoitus,216309 66%,216307 33% <br>
                     Väriarvot:  <br>
                     Pinkki iskup.520g/kalibp.190g/40s./1.5% <br>
                     Keltainen ip.520g/kalibp.190g/40s./1.5% <br>
